[project]
name = "ftl-sdlc-loop"
version = "0.4.0"
description = "Autonomous multi-agent software development system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ben Thomasson", email = "ben.thomasson@gmail.com"}
]
keywords = ["ai", "agents", "development", "automation", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ftl-beliefs",
]

[project.urls]
Homepage = "https://github.com/benthomasson/ftl-sdlc-loop"
Repository = "https://github.com/benthomasson/ftl-sdlc-loop"
Issues = "https://github.com/benthomasson/ftl-sdlc-loop/issues"

[project.scripts]
ftl-sdlc-loop = "ftl_sdlc_loop.supervisor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
]
